[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "wheel",
  "setuptools>=45",
  "setuptools_scm[toml]>=6.0",
  "cmake-build-extension>=0.4",
  "cppyy==2.4.2",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "post-release"

[tool.cibuildwheel]
build-frontend = "build"
